<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed_rviz_plugins</name>
  <version>0.9.1</version>
  <description>
     ED plugins for RViz.
  </description>
  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>
  <license>MIT</license>

  <url>http://ros.org/wiki/rviz_plugins</url>
  <author email="reinzor@gmail.com">Rein Appeldoorn</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ed_gui_server_msgs</depend>
  <depend>rviz</depend>

  <build_depend>qtbase5-dev</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <test_depend>catkin_lint_cmake</test_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml" />
  </export>
</package>
